Bugfix: switching logo height from a percentage to a pixel height fixes weird logo stretching/blank space in firefox and chrome.

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -64,7 +64,7 @@ body {
 	align-content: center;
 
 	.header-logo {
-		height: 80%;
+		height: @header-height * 0.8;
 		padding: @header-height * 0.1;
 	}
 
